# AgentGraph

./: .gitignore  Dockerfile  LICENSE  MANIFEST.in  README.md  SECURITY_AUDIT.md  demo.py  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  release.yml
agentgraph/: __init__.py  cli.py  easy.py
agentgraph/api/: registry_routes.py  server.py
agentgraph/core/: schema.py
agentgraph/integrations/: __init__.py  crewai.py  openai_assistants.py
agentgraph/mcp/: __init__.py  __main__.py  server.py
agentgraph/registry/: __init__.py  client.py  models.py  registry.py  reputation.py
agentgraph/sdk/: client.py
agentgraph/search/: __init__.py  semantic.py
agentgraph/sharing/: __init__.py  hub.py  protocol.py
agentgraph/storage/: database.py
dashboard/: index.html
docs/: api.md  index.html  mcp.md  sdk.md
examples/: multi_agent_demo.py
js/: README.md  package.json  tsconfig.json
js/src/: index.ts
tests/: __init__.py  test_api.py  test_basic.py  test_cli.py  test_easy.py  test_edge_cases.py  test_integration.py  test_registry.py  test_registry_api.py  test_reputation.py  test_sdk.py  test_search.py  test_sharing.py
