[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentgraph"
version = "0.2.0"
description = "The Memory Layer for AI Agents - Track, visualize, and share context between AI agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "ICE-CUBA"}
]
keywords = ["ai", "agents", "llm", "tracking", "observability", "langchain", "openai", "crewai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "requests>=2.31.0",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.5.0",
    "websockets>=12.0",
]
openai = ["openai>=1.12.0"]
langchain = ["langchain>=0.1.0"]
crewai = ["crewai>=0.28.0"]
all = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.5.0",
    "websockets>=12.0",
    "openai>=1.12.0",
    "langchain>=0.1.0",
    "crewai>=0.28.0",
]

[project.scripts]
agentgraph-server = "agentgraph.api.server:run_server"

[project.urls]
Homepage = "https://github.com/ICE-CUBA/AgentGraph"
Documentation = "https://github.com/ICE-CUBA/AgentGraph#readme"
Repository = "https://github.com/ICE-CUBA/AgentGraph"
Issues = "https://github.com/ICE-CUBA/AgentGraph/issues"

[tool.setuptools.packages.find]
exclude = ["tests*"]

[tool.setuptools.package-data]
agentgraph = ["dashboard/*.html"]
